syntax = "proto3";

package user;

service UserService {
  rpc GetUser (UserRequest) returns (UserResponse);
}

message UserRequest {
  uint64 user_id = 1;
}

message UserResponse {
  uint64 user_id = 1;
  string name = 2;
  string email = 3;
}